[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-101"
version = "0.1.0"
description = "LangGraph tutorial"
license = "MIT"
dependencies = [
    "langchain-anthropic>=0.3.14",
    "langgraph>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
